--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
 .App {
-  text-align: center;
+  width: 100%;
+  height: 100%;
+}
+.main-links > a {
+  margin: 10px;
+  font-family: fantasy;
+  font-size: 2em;
+  color: whitesmoke;
+  text-decoration: none;
 }
